fixed layout issue, need to work on readme

--- a/style.css
+++ b/style.css
@@ -32,3 +32,13 @@ span {
 .forecast-card {
     margin: 0 15px;
 }
+
+#weather-display {
+    padding: 0 0;
+}
+
+@media screen and (max-width: 991px) {    
+    #info-sec {
+        flex-direction: column;
+    }
+}
